# cli

./: .pre-commit-config.yaml  CHANGELOG.md  CHANGELOG.rst  LICENSE  README.md  README.rst  pyproject.toml
.github/workflows/: CI.yml  preferred-CI.yml
radekholy24/cli/: __init__.py  __main__.py  app.py
tests/: __init__.py  test___main__.py  test_app.py
