[project]
name = "radekholy24.cli"
authors = [{ name="Radek Holý" }]
description = "A CLI client for a file server"
readme = "README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "Natural Language :: English",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Private :: Do Not Upload",
    # Python 3.12 is the latest packaged for my system.
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13"
]
license = "MIT"
requires-python = ">=3.12"
dynamic = ["version"]

[project.urls]
Homepage = "https://radekholy24.cz/cli"

[project.scripts]
file-client = "radekholy24.cli.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "CHANGELOG.md"
pattern = "## \\[(?P<version>\\d+\\.\\d+\\.\\d+)] - \\d+-\\d+-\\d+"

[tool.hatch.build.targets.sdist]
only-include = ["radekholy24", "tests"]

[tool.hatch.build.targets.wheel]
only-include = ["radekholy24"]
