[project]
name = "radekholy24.cli"
version = "0.1.0"
authors = [{ name="Radek Holý" }]
description = "A CLI to a file server"
readme = "README.rst"
keywords = ["CLI"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "Natural Language :: English",
    # Linux is my system.
    # Other systems are not supported since we use "locale.setlocale" in a plarform specific way (other plarforms use different language codes).
    "Operating System :: POSIX :: Linux",
    "Private :: Do Not Upload",
    # The versions supported by PSF at this moment.
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    # The intersection of the available classifiers and the implementations available in CI.
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy"
]
license = "MIT"
requires-python = ">=3.9,<=3.14"

[project.urls]
Homepage = "https://radekholy24.cz/cli"

[build-system]
# Hatchling 1.17 is the default on my system.
requires = ["hatchling~=1.17"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
only-include = ["radekholy24", "tests"]

[tool.hatch.build.targets.wheel]
only-include = ["radekholy24"]
